--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/copy-assets.js",
     "preview": "vite preview",
     "build:utools": "vite build && node scripts/build-utools.js",
     "test": "vitest",
